# principios-solid

./: CMakeLists.txt  README.md  ball.cpp  ball.h  ball_raylib.cpp  main_sfml.cpp
SRP/problem/: ball_raylib.cpp  ball_raylib.h  ball_sfml.cpp  ball_sfml.h  main_raylib.cpp  main_sfml.cpp
SRP/solution/: ball.cpp  ball.h  main_raylib.cpp  main_sfml.cpp  render_manager.cpp  render_manager.h  render_manager_raylib.cpp  render_manager_raylib.h  render_manager_sfml.cpp
